--- a/.github/ci.yml
+++ b/.github/ci.yml
@@ -1,4 +1,4 @@
-name: ci
+name: CI - ServeRest
 
 on:
   push:
@@ -21,4 +21,3 @@ jobs:
       
     - name: Run Rubocop
       run: bundle exec rubocop
-      
